--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-body, html {
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
 }
 
 h1 {
     text-align: center;
-    margin: 10px;
+    margin-top: 20px;
 }
 
 #map {
-    height: 90vh;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 800px;
 }
